Disable circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,210 +191,210 @@ references:
         only: /.*/
 
 jobs:
-  gcc_4_8_debug:
-    <<: *job_definition
-    environment:
-      CC: gcc-4.8
-      CXX: g++-4.8
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-4.8"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  gcc_4_8_release:
-    <<: *job_definition
-    environment:
-      CC: gcc-4.8
-      CXX: g++-4.8
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-4.8"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  gcc_5_debug:
-    <<: *job_definition
-    environment:
-      CC: gcc-5
-      CXX: g++-5
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-5"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  gcc_5_release:
-    <<: *job_definition
-    environment:
-      CC: gcc-5
-      CXX: g++-5
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-5"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  gcc_6_debug:
-    <<: *job_definition
-    environment:
-      CC: gcc-6
-      CXX: g++-6
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-6"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  gcc_6_release:
-    <<: *job_definition
-    environment:
-      CC: gcc-6
-      CXX: g++-6
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-6"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  gcc_7_debug:
-    <<: *job_definition
-    environment:
-      CC: gcc-7
-      CXX: g++-7
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-7"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  gcc_7_release:
-    <<: *job_definition
-    environment:
-      CC: gcc-7
-      CXX: g++-7
-      BUILD_TOOLSET: gcc
-      APT_COMPILER_PACKAGE: "g++-7"
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  clang_3_7_debug:
-    <<: *job_definition
-    environment:
-      CC: clang-3.7
-      CXX: clang++-3.7
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-3.7
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  clang_3_7_release:
-    <<: *job_definition
-    environment:
-      CC: clang-3.7
-      CXX: clang++-3.7
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-3.7
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  clang_3_8_debug:
-    <<: *job_definition
-    environment:
-      CC: clang-3.8
-      CXX: clang++-3.8
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-3.8
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  clang_3_8_release:
-    <<: *job_definition
-    environment:
-      CC: clang-3.8
-      CXX: clang++-3.8
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-3.8
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  clang_4_0_debug:
-    <<: *job_definition
-    environment:
-      CC: clang-4.0
-      CXX: clang++-4.0
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-4.0
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  clang_4_0_release:
-    <<: *job_definition
-    environment:
-      CC: clang-4.0
-      CXX: clang++-4.0
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-4.0
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  clang_5_0_debug:
-    <<: *job_definition
-    environment:
-      CC: clang-5.0
-      CXX: clang++-5.0
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-5.0
-      CXXFLAGS: ""
-      BUILD_TYPE: "Debug"
-  clang_5_0_release:
-    <<: *job_definition
-    environment:
-      CC: clang-5.0
-      CXX: clang++-5.0
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-5.0
-      CXXFLAGS: ""
-      BUILD_TYPE: "Release"
-  no_compatibility:
-    <<: *job_definition
-    environment:
-      CC: clang-5.0
-      CXX: clang++-5.0
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-5.0
-      CXXFLAGS: "-DCRYFS_NO_COMPATIBILITY"
-      BUILD_TYPE: "Debug"
-  address_sanitizer:
-    <<: *job_definition
-    environment:
-      CC: clang-5.0
-      CXX: clang++-5.0
-      BUILD_TOOLSET: clang
-      APT_COMPILER_PACKAGE: clang-5.0
-      CXXFLAGS: "-O2 -fsanitize=address -fno-omit-frame-pointer -fno-common -fsanitize-address-use-after-scope"
-      BUILD_TYPE: "Debug"
-      # Note: Leak detection is disabled because libfuse itself is leaky...
-      ASAN_OPTIONS: "detect_leaks=0 check_initialization_order=1 detect_stack_use_after_return=1 detect_invalid_pointer_pairs=1 atexit=1"
+#  gcc_4_8_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-4.8
+#      CXX: g++-4.8
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-4.8"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  gcc_4_8_release:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-4.8
+#      CXX: g++-4.8
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-4.8"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  gcc_5_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-5
+#      CXX: g++-5
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-5"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  gcc_5_release:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-5
+#      CXX: g++-5
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-5"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  gcc_6_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-6
+#      CXX: g++-6
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-6"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  gcc_6_release:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-6
+#      CXX: g++-6
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-6"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  gcc_7_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-7
+#      CXX: g++-7
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-7"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  gcc_7_release:
+#    <<: *job_definition
+#    environment:
+#      CC: gcc-7
+#      CXX: g++-7
+#      BUILD_TOOLSET: gcc
+#      APT_COMPILER_PACKAGE: "g++-7"
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  clang_3_7_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-3.7
+#      CXX: clang++-3.7
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-3.7
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  clang_3_7_release:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-3.7
+#      CXX: clang++-3.7
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-3.7
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  clang_3_8_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-3.8
+#      CXX: clang++-3.8
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-3.8
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  clang_3_8_release:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-3.8
+#      CXX: clang++-3.8
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-3.8
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  clang_4_0_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-4.0
+#      CXX: clang++-4.0
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-4.0
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  clang_4_0_release:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-4.0
+#      CXX: clang++-4.0
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-4.0
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  clang_5_0_debug:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-5.0
+#      CXX: clang++-5.0
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-5.0
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Debug"
+#  clang_5_0_release:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-5.0
+#      CXX: clang++-5.0
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-5.0
+#      CXXFLAGS: ""
+#      BUILD_TYPE: "Release"
+#  no_compatibility:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-5.0
+#      CXX: clang++-5.0
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-5.0
+#      CXXFLAGS: "-DCRYFS_NO_COMPATIBILITY"
+#      BUILD_TYPE: "Debug"
+#  address_sanitizer:
+#    <<: *job_definition
+#    environment:
+#      CC: clang-5.0
+#      CXX: clang++-5.0
+#      BUILD_TOOLSET: clang
+#      APT_COMPILER_PACKAGE: clang-5.0
+#      CXXFLAGS: "-O2 -fsanitize=address -fno-omit-frame-pointer -fno-common -fsanitize-address-use-after-scope"
+#      BUILD_TYPE: "Debug"
+#      # Note: Leak detection is disabled because libfuse itself is leaky...
+#      ASAN_OPTIONS: "detect_leaks=0 check_initialization_order=1 detect_stack_use_after_return=1 detect_invalid_pointer_pairs=1 atexit=1"
 
 workflows:
   version: 2
 
-  build_and_test:
-    jobs:
-    - gcc_4_8_debug:
-        <<: *enable_for_tags
-    - gcc_4_8_release:
-        <<: *enable_for_tags
-    - gcc_5_debug:
-        <<: *enable_for_tags
-    - gcc_5_release:
-        <<: *enable_for_tags
-    - gcc_6_debug:
-        <<: *enable_for_tags
-    - gcc_6_release:
-        <<: *enable_for_tags
-    - gcc_7_debug:
-        <<: *enable_for_tags
-    - gcc_7_release:
-        <<: *enable_for_tags
-    - clang_3_7_debug:
-        <<: *enable_for_tags
-    - clang_3_7_release:
-        <<: *enable_for_tags
-    - clang_3_8_debug:
-        <<: *enable_for_tags
-    - clang_3_8_release:
-        <<: *enable_for_tags
-    - clang_4_0_debug:
-        <<: *enable_for_tags
-    - clang_4_0_release:
-        <<: *enable_for_tags
-    - clang_5_0_debug:
-        <<: *enable_for_tags
-    - clang_5_0_release:
-        <<: *enable_for_tags
-    - no_compatibility:
-        <<: *enable_for_tags
-    - address_sanitizer:
-        <<: *enable_for_tags
+#  build_and_test:
+#    jobs:
+#    - gcc_4_8_debug:
+#        <<: *enable_for_tags
+#    - gcc_4_8_release:
+#        <<: *enable_for_tags
+#    - gcc_5_debug:
+#        <<: *enable_for_tags
+#    - gcc_5_release:
+#        <<: *enable_for_tags
+#    - gcc_6_debug:
+#        <<: *enable_for_tags
+#    - gcc_6_release:
+#        <<: *enable_for_tags
+#    - gcc_7_debug:
+#        <<: *enable_for_tags
+#    - gcc_7_release:
+#        <<: *enable_for_tags
+#    - clang_3_7_debug:
+#        <<: *enable_for_tags
+#    - clang_3_7_release:
+#        <<: *enable_for_tags
+#    - clang_3_8_debug:
+#        <<: *enable_for_tags
+#    - clang_3_8_release:
+#        <<: *enable_for_tags
+#    - clang_4_0_debug:
+#        <<: *enable_for_tags
+#    - clang_4_0_release:
+#        <<: *enable_for_tags
+#    - clang_5_0_debug:
+#        <<: *enable_for_tags
+#    - clang_5_0_release:
+#        <<: *enable_for_tags
+#    - no_compatibility:
+#        <<: *enable_for_tags
+#    - address_sanitizer:
+#        <<: *enable_for_tags
 
